--- a/archive.html
+++ b/archive.html
@@ -10,8 +10,9 @@ title: Blog
             <p style="font-size: 40px;">Talks and Workshops</p>
             <h4>January 6th - Monday : Topic :- <span style="font-weight: 200;">Relations, Data and Knowledge, How machines can get smarter?</span> </h4>
             <p>The topic will focus on understanding what are relations and will talk about Knowledge Graphs. The pre-requisites for understanding the talk are 
-                <li>Understanding of Vector spaces</li>
             </p>
+
+            <a href="/assets/talks/talk1.pdf" target="_blank" type="btn" class="btn btn-primary">Slides</a>
         </div>
     </div>
 </section>
