--- a/index.html
+++ b/index.html
@@ -42,14 +42,30 @@ title: Home
         <div class="row">
             <div class="col-lg-12">
                 <p style="font-size: 40px;">Upcoming Talks and Workshops</p>
-                <h4>January 6th - Monday : Topic :- <span style="font-weight: 200;">Relations, Data and Knowledge, How machines can get smarter?</span> </h4>
+                <!-- <h4>January 9th - Thursday : Topic :- <span style="font-weight: 200;">Relations, Data and Knowledge, How machines can get smarter?</span> </h4>
                 <p>The topic will focus on understanding what are relations and will talk about Knowledge Graphs. The pre-requisites for understanding the talk are 
                     <li>Understanding of Vector spaces</li>
-                </p>
+                </p> -->
             </div>
         </div>
     </div>
 </section>
+
+<section style="margin-top:6em">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p style="font-size: 40px;">Past Talks and Workshops</p>
+                <h4>January 6th - Monday : Topic :- <span style="font-weight: 200;">Relations, Data and Knowledge, How machines can get smarter?</span> </h4>
+                <p>The topic will focus on understanding what are relations and will talk about Knowledge Graphs. The pre-requisites for understanding the talk are 
+                    <li>Understanding of Vector spaces</li>
+                </p>
+                <b>--Slides Uploaded!--</b>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <section>
     <div class="container">
